--- a/katrid/templates/list-view.html
+++ b/katrid/templates/list-view.html
@@ -23,13 +23,19 @@
     </div>
   </div>
 
-  <div class="content no-padding">
+  <div class="content">
   <div class="panel panel-default data-panel">
     <div class="panel-body no-padding">
 
-        <table id="data-table-1" class="table table-striped table-bordered table-hover display responsive nowrap" width="100%">
+        <table id="data-list-1" class="table table-striped table-bordered table-hover display responsive nowrap" width="100%">
           <thead>
           <tr>
+            <th class="action-checkbox-column">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </th>
             <th>Name</th>
             <th>Position</th>
             <th>Office</th>
@@ -40,6 +46,12 @@
           </thead>
           <tbody>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Tiger Nixon</td>
             <td>System Architect</td>
             <td>Edinburgh</td>
@@ -48,6 +60,12 @@
             <td>$320,800</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Garrett Winters</td>
             <td>Accountant</td>
             <td>Tokyo</td>
@@ -56,6 +74,12 @@
             <td>$170,750</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Ashton Cox</td>
             <td>Junior Technical Author</td>
             <td>San Francisco</td>
@@ -64,6 +88,12 @@
             <td>$86,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Cedric Kelly</td>
             <td>Senior Javascript Developer</td>
             <td>Edinburgh</td>
@@ -72,6 +102,12 @@
             <td>$433,060</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Airi Satou</td>
             <td>Accountant</td>
             <td>Tokyo</td>
@@ -80,6 +116,12 @@
             <td>$162,700</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Brielle Williamson</td>
             <td>Integration Specialist</td>
             <td>New York</td>
@@ -88,6 +130,12 @@
             <td>$372,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Herrod Chandler</td>
             <td>Sales Assistant</td>
             <td>San Francisco</td>
@@ -96,6 +144,12 @@
             <td>$137,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Rhona Davidson</td>
             <td>Integration Specialist</td>
             <td>Tokyo</td>
@@ -104,6 +158,12 @@
             <td>$327,900</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Colleen Hurst</td>
             <td>Javascript Developer</td>
             <td>San Francisco</td>
@@ -112,6 +172,12 @@
             <td>$205,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Sonya Frost</td>
             <td>Software Engineer</td>
             <td>Edinburgh</td>
@@ -120,6 +186,12 @@
             <td>$103,600</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Jena Gaines</td>
             <td>Office Manager</td>
             <td>London</td>
@@ -128,6 +200,12 @@
             <td>$90,560</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Quinn Flynn</td>
             <td>Support Lead</td>
             <td>Edinburgh</td>
@@ -136,6 +214,12 @@
             <td>$342,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Charde Marshall</td>
             <td>Regional Director</td>
             <td>San Francisco</td>
@@ -144,6 +228,12 @@
             <td>$470,600</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Haley Kennedy</td>
             <td>Senior Marketing Designer</td>
             <td>London</td>
@@ -152,6 +242,12 @@
             <td>$313,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Tatyana Fitzpatrick</td>
             <td>Regional Director</td>
             <td>London</td>
@@ -160,6 +256,12 @@
             <td>$385,750</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Michael Silva</td>
             <td>Marketing Designer</td>
             <td>London</td>
@@ -168,6 +270,12 @@
             <td>$198,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Paul Byrd</td>
             <td>Chief Financial Officer (CFO)</td>
             <td>New York</td>
@@ -176,6 +284,12 @@
             <td>$725,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Gloria Little</td>
             <td>Systems Administrator</td>
             <td>New York</td>
@@ -184,6 +298,12 @@
             <td>$237,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Bradley Greer</td>
             <td>Software Engineer</td>
             <td>London</td>
@@ -192,6 +312,12 @@
             <td>$132,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Dai Rios</td>
             <td>Personnel Lead</td>
             <td>Edinburgh</td>
@@ -200,6 +326,12 @@
             <td>$217,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Jenette Caldwell</td>
             <td>Development Lead</td>
             <td>New York</td>
@@ -208,6 +340,12 @@
             <td>$345,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Yuri Berry</td>
             <td>Chief Marketing Officer (CMO)</td>
             <td>New York</td>
@@ -216,6 +354,12 @@
             <td>$675,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Caesar Vance</td>
             <td>Pre-Sales Support</td>
             <td>New York</td>
@@ -224,6 +368,12 @@
             <td>$106,450</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Doris Wilder</td>
             <td>Sales Assistant</td>
             <td>Sidney</td>
@@ -232,6 +382,12 @@
             <td>$85,600</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Angelica Ramos</td>
             <td>Chief Executive Officer (CEO)</td>
             <td>London</td>
@@ -240,6 +396,12 @@
             <td>$1,200,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Gavin Joyce</td>
             <td>Developer</td>
             <td>Edinburgh</td>
@@ -248,6 +410,12 @@
             <td>$92,575</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Jennifer Chang</td>
             <td>Regional Director</td>
             <td>Singapore</td>
@@ -256,6 +424,12 @@
             <td>$357,650</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Brenden Wagner</td>
             <td>Software Engineer</td>
             <td>San Francisco</td>
@@ -264,6 +438,12 @@
             <td>$206,850</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Fiona Green</td>
             <td>Chief Operating Officer (COO)</td>
             <td>San Francisco</td>
@@ -272,6 +452,12 @@
             <td>$850,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Shou Itou</td>
             <td>Regional Marketing</td>
             <td>Tokyo</td>
@@ -280,6 +466,12 @@
             <td>$163,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Michelle House</td>
             <td>Integration Specialist</td>
             <td>Sidney</td>
@@ -288,6 +480,12 @@
             <td>$95,400</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Suki Burks</td>
             <td>Developer</td>
             <td>London</td>
@@ -296,6 +494,12 @@
             <td>$114,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Prescott Bartlett</td>
             <td>Technical Author</td>
             <td>London</td>
@@ -304,6 +508,12 @@
             <td>$145,000</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Gavin Cortez</td>
             <td>Team Leader</td>
             <td>San Francisco</td>
@@ -312,6 +522,12 @@
             <td>$235,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Martena Mccray</td>
             <td>Post-Sales support</td>
             <td>Edinburgh</td>
@@ -320,6 +536,12 @@
             <td>$324,050</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Unity Butler</td>
             <td>Marketing Designer</td>
             <td>San Francisco</td>
@@ -328,6 +550,12 @@
             <td>$85,675</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Howard Hatfield</td>
             <td>Office Manager</td>
             <td>San Francisco</td>
@@ -336,6 +564,12 @@
             <td>$164,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Hope Fuentes</td>
             <td>Secretary</td>
             <td>San Francisco</td>
@@ -344,6 +578,12 @@
             <td>$109,850</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Vivian Harrell</td>
             <td>Financial Controller</td>
             <td>San Francisco</td>
@@ -352,6 +592,12 @@
             <td>$452,500</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Timothy Mooney</td>
             <td>Office Manager</td>
             <td>London</td>
@@ -360,6 +606,12 @@
             <td>$136,200</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Jackson Bradshaw</td>
             <td>Director</td>
             <td>New York</td>
@@ -368,6 +620,12 @@
             <td>$645,750</td>
           </tr>
           <tr>
+            <td class="action-checkbox">
+              <label class="checkbox">
+                <input type="checkbox">
+                <i></i>
+              </label>
+            </td>
             <td>Olivia Liang</td>
             <td>Support Engineer</td>
             <td>Singapore</td>
@@ -381,4 +639,17 @@
     </div>
   </div>
   </div>
+{% endblock %}
+{% block additional_scripts %}
+  <script src="plugins/datatables/datatables.js"></script>
+  <script src="plugins/datatables/datatables.responsive.min.js"></script>
+  <script>
+  $(document).ready(function () {
+    $('.action-checkbox-column input').change(function () {
+      $('.action-checkbox input').prop('checked', $(this).prop('checked'));
+    });
+
+    $('#data-list-1').dataTable();
+  });
+  </script>
 {% endblock %}
