--- a/katrid/theme/less/style/checkbox.less
+++ b/katrid/theme/less/style/checkbox.less
@@ -118,11 +118,12 @@ label.radio > i:after {
   width: 30px;
 }
 
-.table .action-checkbox>.checkbox, .table .action-checkbox-column>.checkbox {
+.table .action-checkbox>.checkbox, .table .action-checkbox-column>.checkbox,
+.table.table-bordered .action-checkbox-column, .table.table-bordered .action-checkbox
+{
   min-height: 20px;
-}
-
-.table.table-bordered .action-checkbox-column, .table.table-bordered .action-checkbox {
+  margin-top: 0;
+  margin-bottom: 0;
   max-width: 36px;
 }
 
