--- a/katrid/theme/less/style/data.less
+++ b/katrid/theme/less/style/data.less
@@ -74,3 +74,13 @@
 .data-panel h1 {
   padding-bottom: 16px;
 }
+
+.panel-body.no-padding>.dataTables_wrapper .dataTables_length,
+.panel-body.no-padding>.dataTables_wrapper .dataTables_info,
+.panel-body.no-padding>.dataTables_wrapper .dataTables_filter {
+  margin: 10px 15px 9px 15px;
+}
+
+.panel-body.no-padding>.dataTables_wrapper .dataTables_filter label input {
+  margin-left: 6px;
+}
