--- a/katrid/templates/calendar-view.html
+++ b/katrid/templates/calendar-view.html
@@ -11,7 +11,7 @@
           <li><a href="#">Forms</a></li>
           <li>Calendar View
             <!-- demo only purposes (remember to remove it in future) -->
-            <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-primary">Toggle no-padding</label>
+            <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-info">Toggle no-padding</label>
           </li>
         </ol>
         <p class="help-block">Form help text (leave a useful message here)</p>
