--- a/katrid/templates/form-elements.html
+++ b/katrid/templates/form-elements.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
   <div class="panel page-heading">
-    <h2>Components</h2>
+    <h2>Form Elements</h2>
     <ol class="breadcrumb">
       <li>
         <a href="#">Home</a>
@@ -13,7 +13,7 @@
       <li>
         <a href="#">Forms</a>
       </li>
-      <li>Components</li>
+      <li>Form Elements</li>
     </ol>
   </div>
 
