--- a/katrid/templates/list-view.html
+++ b/katrid/templates/list-view.html
@@ -8,7 +8,7 @@
           <li><a href="#">Forms</a></li>
           <li>List View
             <!-- demo only purposes (remember to remove it in future) -->
-            <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-primary">Toggle no-padding</label>
+            <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-info">Toggle no-padding</label>
           </li>
         </ol>
         <div class="pull-right">
