--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -31,9 +31,9 @@ body.page-small.show-left-menu .navbar-header {
 
 .small-logo {
   display: none;
-  font-size: large;
+  font-size: 15px;
   float: left;
-  padding-top: 12px;
+  padding-top: 14px;
   margin-left: 10px;
 }
 
