--- a/katrid/templates/include/left-menu.html
+++ b/katrid/templates/include/left-menu.html
@@ -14,6 +14,9 @@
       <li><a href="#"><i class="fa fa-fw fa-sign-out"></i> Sign out</a></li>
     </ul>
   </div>
+  <div class="module-menu">
+    <a href="#">Accounting</a>
+  </div>
   <nav class="sidebar-nav">
     <ul id="left-side-menu" class="nav" aria-expanded="false">
       <li class="menu-item">
