--- a/katrid/templates/include/navbar.html
+++ b/katrid/templates/include/navbar.html
@@ -1,8 +1,9 @@
 <!-- Fixed navbar -->
 <nav id="header" class="navbar navbar-default navbar-skin">
   <div class="navbar-header">
-    <a class="navbar-brand dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true"
-       aria-expanded="false">Accounting</a>
+    <a class="navbar-brand dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+      Accounting
+    </a>
     <ul class="dropdown-menu">
       <li><a href="#"><i class="fa fa-fw fa-pie-chart"></i> CRM / Sales</a></li>
       <li><a href="#"><i class="fa fa-fw fa-users"></i> Human Resources</a></li>
