--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -104,6 +104,7 @@
 }
 
 .navbar-search-control {
+  outline: 0;
   transition: all 300ms;
   margin-top: 7px;
   border: 1px solid @input-border;
@@ -199,7 +200,8 @@ a.user-dropdown {
   }
 
   &.navbar-default {
-    background: #dbdbdb;
+    background: #f1f3f2;
+    //background: #e8e8e8;
     background-repeat: repeat-x;
     border-bottom: 1px solid #b6b6b6;
   }
