--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -19,7 +19,8 @@ body {
   }
 
   #left-menu .module-menu a {
-    background: @bg-color;
+    background: #ec8157;
+    //background: @bg-color;
     color: #f2f2f2;
   }
 
