--- a/katrid/theme/less/style/checkbox.less
+++ b/katrid/theme/less/style/checkbox.less
@@ -119,13 +119,22 @@ label.radio > i:after {
 }
 
 .table .action-checkbox>.checkbox, .table .action-checkbox-column>.checkbox,
-.table.table-bordered .action-checkbox-column, .table.table-bordered .action-checkbox
+.table.table-bordered .action-checkbox-column, .table.table-bordered .action-checkbox >.checkbox
 {
-  min-height: 20px;
+  min-height: 20px !important;
+  min-width: 18px !important;
+  height: 20px !important;
+  width: 18px !important;
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 36px;
+  padding-left: 0;
 }
+
+.table.table-bordered .action-checkbox-column, .table.table-bordered .action-checkbox-column {
+  padding-left: 8px;
+  padding-right: 6px;
+}
+
 
 .table.table-selection .selected td {
   background-color: @table-bg-accent;
