--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -21,6 +21,7 @@ body {
   #left-menu .module-menu a {
     background: #ec8157;
     //background: @bg-color;
+    text-align: center;
     color: #f2f2f2;
   }
 
