--- a/katrid/templates/include/left-menu.html
+++ b/katrid/templates/include/left-menu.html
@@ -15,13 +15,18 @@
     </ul>
   </div>
   <div class="module-menu">
-    <a href="#">Accounting</a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accounting <i class="pe pe-7s-right-arrow pull-right"></i></a>
+    <ul class="dropdown-menu">
+      <li><a href="#"><i class="fa fa-fw fa-pie-chart"></i> CRM / Sales</a></li>
+      <li><a href="#"><i class="fa fa-fw fa-users"></i> Human Resources</a></li>
+      <li><a href="#"><i class="fa fa-fw fa-money"></i> Purchases</a></li>
+    </ul>
   </div>
   <nav class="sidebar-nav">
     <ul id="left-side-menu" class="nav" aria-expanded="false">
       <li class="menu-item">
-        <a href="#"><i class="fa fa-lg fa-fw fa-home"></i> Dashboard <span
-            class="label label-danger pull-right animated bounceIn">New</span><br>
+        <a href="#"><i class="fa fa-lg fa-fw fa-home"></i> Dashboard
+          <br>
           <small>This is the menu description...</small>
         </a>
         <ul class="nav">
@@ -34,8 +39,8 @@
         </ul>
       </li>
       <li class="menu-item">
-        <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> CRM / Sales <span
-            class="label label-info pull-right animated bounceIn">New</span><br>
+        <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> CRM / Sales
+          <br>
           <small>CRM, POS and sales management...</small>
         </a>
         <ul class="nav">
@@ -48,8 +53,7 @@
         </ul>
       </li>
       <li class="menu-item">
-        <a href="#"><i class="fa fa-lg fa-fw fa-print"></i> BI / Reporting <span
-            class="label label-success pull-right animated bounceIn">New</span><br>
+        <a href="#"><i class="fa fa-lg fa-fw fa-print"></i> BI / Reporting <br>
           <small>Reports and more...</small>
         </a>
         <ul class="nav">
