--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -18,10 +18,12 @@ body {
     color: #f2f2f2;
   }
 
-  #left-menu .module-menu a {
+  #left-menu .module-menu>a {
     background: #ec8157;
-    //background: @bg-color;
     color: #f2f2f2;
+    i {
+      margin-top: 3px;
+    }
   }
 
   #header.navbar-skin {
