--- a/katrid/templates/include/navbar.html
+++ b/katrid/templates/include/navbar.html
@@ -1,15 +1,9 @@
 <!-- Fixed navbar -->
 <nav id="header" class="navbar navbar-default navbar-skin">
   <div class="navbar-header">
-    <a class="navbar-brand dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+    <a class="navbar-brand" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       Accounting
     </a>
-    <ul class="dropdown-menu">
-      <li><a href="#"><i class="fa fa-fw fa-pie-chart"></i> CRM / Sales</a></li>
-      <li><a href="#"><i class="fa fa-fw fa-users"></i> Human Resources</a></li>
-      <li><a href="#"><i class="fa fa-fw fa-money"></i> Purchases</a></li>
-    </ul>
-
   </div>
   <div class="header-link hide-left-menu">
     <i class="fa fa-bars"></i>
@@ -25,7 +19,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
            aria-expanded="false">Shortcuts <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu" aria-haspopup="true" aria-expanded="true">
           <li><a href="ng-pos.html" target="_blank">POS (Point of Sales)</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
