--- a/katrid/theme/less/style/timeline.less
+++ b/katrid/theme/less/style/timeline.less
@@ -24,6 +24,6 @@
     border-left: 1px solid @panel-default-border;
     margin-left: 38px;
     padding-left: 4px;
-    margin-bottom: 5px;
+    padding-bottom: 5px;
   }
 }
