--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -8,7 +8,7 @@ body {
   border-top: none;
 }
 
-.skin(@bg-color) {
+.skin(@bg-color; @h-menu: #ec8157) {
   #header.navbar {
     border: none;
   }
@@ -19,11 +19,8 @@ body {
   }
 
   #left-menu .module-menu>a {
-    background: #ec8157;
+    background: @h-menu;
     color: #f2f2f2;
-    i {
-      margin-top: 3px;
-    }
   }
 
   #header.navbar-skin {
@@ -145,7 +142,7 @@ body {
 }
 
 .red-skin {
-  .skin(#ee6161);
+  .skin(#ee6161, #375f82);
 }
 
 .navy-skin {
