--- a/katrid/theme/less/style/menu.less
+++ b/katrid/theme/less/style/menu.less
@@ -59,5 +59,11 @@
     padding: 8px;
     display: block;
     font-size: 14px;
+    background-color: #496d8d;
+    color: #ffffff;
+  }
+
+  >a>i {
+    margin-top: 3px;
   }
 }
