--- a/katrid/theme/less/style/menu.less
+++ b/katrid/theme/less/style/menu.less
@@ -59,7 +59,7 @@
     padding: 8px;
     display: block;
     font-size: 14px;
-    background-color: #03a9f4;
+    background-color: #496d8d;
     color: #ffffff;
   }
 
