--- a/katrid/templates/list-view.html
+++ b/katrid/templates/list-view.html
@@ -658,8 +658,8 @@
       },
       sDom: 't',
       paging: false,
-      'bFilter': false,
-      'columnDefs': [
+      bFilter: false,
+      columnDefs: [
         {
           'targets': 'no-sort',
           'orderable': false
