--- a/katrid/theme/less/style/checkbox.less
+++ b/katrid/theme/less/style/checkbox.less
@@ -17,7 +17,8 @@ label.checkbox.checkbox-inline {
   margin-top: 0;
 }
 
-label.checkbox input[type=checkbox] {
+label.checkbox input[type=checkbox],
+label.radio input[type=radio] {
   position: absolute;
   left: -9999px;
 }
