--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -53,6 +53,7 @@ strong {
 }
 
 #page-content {
+  position: absolute;
   overflow: hidden;
   min-height: 100%;
   min-width: 310px;
@@ -73,14 +74,6 @@ strong {
 
 #main-content.custom-bg {
   background: url('../img/custom-bg.png');
-}
-
-#footer.page-footer {
-  background-color: @panel-bg;
-  padding: 15px;
-  //position: absolute;
-  bottom: 0;
-  margin-left: @left-menu-width;
 }
 
 .content {
