--- a/katrid/theme/less/style/layout.less
+++ b/katrid/theme/less/style/layout.less
@@ -2,10 +2,12 @@
 html {
   position: relative;
   height: 100%;
+  background-color: #ffffff;
 }
 
 body {
   height: 100%;
+  background: #efefef;
 }
 
 #header {
@@ -14,6 +16,10 @@ body {
 }
 
 #footer.page-footer {
+  background-color: #d9dbda;
+  padding: 10px;
+  bottom: 0;
+  margin-left: @left-menu-width;
   z-index: 9903;
   width: 100%;
 }
@@ -47,9 +53,6 @@ body.container {
   margin-left: auto;
   margin-right: auto;
 
-  border-right: 1px solid #e7eaec;
-  border-left: 1px solid #e7eaec;
-
   box-shadow: 0 2px 32px rgba(0,0,0,.5);
 
   #header {
@@ -58,6 +61,10 @@ body.container {
 
   #footer.page-footer {
     max-width: (1170px - @left-menu-width);
+  }
+
+  &.hide-left-menu #footer.page-footer {
+    max-width: 1170px;
   }
 
   @media (min-width: @screen-lg-min) {
@@ -75,4 +82,8 @@ body.container {
       width: 940px;
     }
   }
+}
+
+.hide-left-menu #footer.page-footer {
+  margin-left: 0;
 }
