--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -7,6 +7,7 @@
 .skin(@bg-color; @h-menu: #ec8157) {
   #header.navbar {
     border: none;
+    border-bottom: 1px solid #d9dbda;
   }
 
   #left-menu .user-profile-menu {
