--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -121,3 +121,16 @@ h3, h4, h5, h6 {
   content: "\f105";
   font-family: FontAwesome;
 }
+
+.user-info {
+  padding: 4px 8px 0 0;
+  font-weight: 300;
+
+  .user-value {
+    font-size: 16px;
+  }
+
+  .progress {
+    background-color: #ffffff;
+  }
+}
