--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -41,8 +41,6 @@
   width: @left-menu-width;
   float: left;
   position: absolute;
-  //bottom: 0;
-  //top: 52px;
   background-color: @body-bg;
   transition: all 0.3s ease 0s;
 
@@ -56,7 +54,7 @@
   }
 
   .logo-area {
-    text-align: center;
+    //text-align: center;
     padding-top: 2px;
     padding-bottom: 20px;
     position: relative;
