--- a/katrid/theme/less/style/menu.less
+++ b/katrid/theme/less/style/menu.less
@@ -2,6 +2,7 @@
 #left-menu .user-profile-menu {
   width: 100%;
   position: absolute;
+  text-align: center;
   left: 0;
   opacity: .8;
   border: none;
