--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -123,8 +123,19 @@ h3, h4, h5, h6 {
 }
 
 .user-info {
-  padding: 4px 8px 0 0;
+  padding: 2px 8px 0 0;
   font-weight: 300;
+  line-height: 16px;
+
+  * {
+  }
+
+  small {
+    font-weight: 600;
+    font-size: 10px;
+  }
+
+
 
   .user-value {
     font-size: 16px;
