--- a/katrid/templates/page.html
+++ b/katrid/templates/page.html
@@ -66,6 +66,7 @@
 <script src="plugins/jquery.maskedinput/jquery.maskedinput.min.js"></script>
 <script src="plugins/ion-rangeSlider/ion.rangeSlider.min.js"></script>
 <script src="plugins/jquery-ui/jquery-ui.js"></script>
+<script src="plugins/jquery.scrollbox/jquery.scrollbox.min.js"></script>
 {% endblock %}
 <script src="js/bootstrap.min.js"></script>
 
