--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -28,7 +28,7 @@
     .navbar-search-control {
       background: transparent;
       color: #ffffff;
-      border: none;
+      border: 1px solid lighten(@bg-color, 8%);
       border-radius: 4px;
     }
   }
@@ -93,7 +93,7 @@
   }
 
   .navbar-skin .navbar-search-control:focus {
-    border: transparent;
+    border: lighten(@bg-color, 10%);
     outline: none;
   }
 
