--- a/katrid/templates/include/left-menu.html
+++ b/katrid/templates/include/left-menu.html
@@ -1,13 +1,13 @@
 <aside id="left-menu" class="sidebar skin">
-  <div class="logo-area" style="background: transparent">
-    <div class="user-info pull-right">
+  <div class="logo-area">
+    <a href="index.html" class="avatar">
+      <img id="avatar" src="img/user-avatar.jpg" alt="avatar" class="img-circle">
+    </a>
+    <div class="user-info">
       <small>MY SALES</small><br>
       <span class="user-value text-cyan">$37,000</span><span> week</span><br>
       <span class="user-value text-cyan">$7,000</span><span> today</span>
     </div>
-    <a href="index.html">
-      <img id="avatar" src="img/user-avatar.jpg" alt="avatar">
-    </a>
     <a class="user-profile-menu dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span>John Doe</span>
       <span class="user-dropdown"><i class="fa fa-fw fa-angle-down"></i></span>
