--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -41,7 +41,6 @@
   width: @left-menu-width;
   float: left;
   position: absolute;
-  background-color: @body-bg;
   transition: all 0.3s ease 0s;
 
   .menu-item > a {
@@ -54,9 +53,15 @@
   }
 
   .logo-area {
-    padding-top: 2px;
-    padding-bottom: 27px;
+    padding-top: 10px;
+    padding-left: 8px;
+    padding-bottom: 35px;
     position: relative;
+
+    .avatar {
+      float: left;
+      margin-right: 7px;
+    }
   }
 
   .menu-item > a > em {
@@ -197,8 +202,8 @@ a.user-dropdown {
   }
 
   &.navbar-default {
-    background: #f1f3f2;
-    //background: #e8e8e8;
+    background-color: #f1f3f2;
+    background-image: linear-gradient(to bottom,#f1f3f2,#e2e2e2);
     background-repeat: repeat-x;
     border-bottom: 1px solid #b6b6b6;
   }
