--- a/listing/templates/base.html
+++ b/listing/templates/base.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Katrid Listing Theme</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+
+  <div class="listing">
+    <nav id="header" class="navbar navbar-default"></nav>
+  </div>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
