--- a/listing/theme/less/style/navs.less
+++ b/listing/theme/less/style/navs.less
@@ -58,6 +58,10 @@
     padding-top: 2px;
     padding-bottom: 23px;
     position: relative;
+
+    .avatar {
+      float: left;
+    }
   }
 
   .menu-item > a > em {
