--- a/katrid/templates/include/navbar.html
+++ b/katrid/templates/include/navbar.html
@@ -1,5 +1,5 @@
 <!-- Fixed navbar -->
-<nav id="header" class="navbar navbar-default navbar-skin">
+<nav id="header" class="navbar navbar-default">
   <div class="navbar-header">
     <a class="navbar-brand" href="#" role="button">
       Company Name
@@ -14,9 +14,9 @@
   <div id="navbar" class="navbar-collapse">
     <ul class="nav navbar-nav hidden-xs">
       <li class="navbar-search">
-        <label class="prepend-icon">
-          <i class="icon fa fa-search"></i>
+        <label class="append-icon">
           <input id="navbar-search" type="text" class="navbar-search-control" placeholder="Find resources here...">
+          <i class="icon fa fa-search"></i>
         </label>
       </li>
       <li class="dropdown">
