--- a/katrid/templates/include/left-menu.html
+++ b/katrid/templates/include/left-menu.html
@@ -5,8 +5,8 @@
     </a>
     <div class="user-info">
       <small>MY SALES</small><br>
-      <span class="user-value text-cyan">$37,000</span><span> week</span><br>
-      <span class="user-value text-cyan">$7,000</span><span> today</span>
+      <span class="user-value">$37,000</span><span> week</span><br>
+      <span class="user-value">$7,000</span><span> today</span>
     </div>
     <a class="user-profile-menu dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span>John Doe</span>
