--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -4,7 +4,7 @@
   border-top: none;
 }
 
-.skin(@bg-color; @h-menu: #ec8157) {
+.skin(@bg-color; @user-value: #ec8157) {
   #header.navbar1 {
     border: none;
     border-bottom: 1px solid #d9dbda;
@@ -16,7 +16,7 @@
   }
 
   #left-menu .module-menu>a {
-    background: @h-menu;
+    //background-color: @bg-color;
     color: #f2f2f2;
   }
 
