--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -5,7 +5,7 @@
 }
 
 .skin(@bg-color; @user-value: #ec8157) {
-  #header.navbar1 {
+  #header.navbar {
     border: none;
     border-bottom: 1px solid #d9dbda;
   }
