--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -7,7 +7,7 @@
 .skin(@bg-color; @user-value: #ec8157) {
   #header.navbar {
     border: none;
-    border-bottom: 1px solid #d9dbda;
+    //border-bottom: 1px solid #d9dbda;
   }
 
   #left-menu .user-profile-menu {
@@ -33,11 +33,10 @@
     }
   }
 
-  .navbar-header1 {
+  .navbar-header {
     width: 220px;
     border-right: none;
     background: lighten(@bg-color, 8%);
-    border-color: transparent;
 
     > a, > a.navbar-brand:focus {
       transition: all 300ms;
