--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -36,7 +36,7 @@
   .navbar-header {
     width: 220px;
     border-right: none;
-    background: lighten(@bg-color, 8%);
+    background: @bg-color;
 
     > a, > a.navbar-brand:focus {
       transition: all 300ms;
