--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -202,8 +202,8 @@ a.user-dropdown {
   }
 
   &.navbar-default {
-    background-color: #f1f3f2;
-    background-image: linear-gradient(to bottom,#f1f3f2,#e2e2e2);
+    background-color: #e9ebea;
+    //background-image: linear-gradient(to bottom,#f1f3f2,#e2e2e2);
     background-repeat: repeat-x;
     border-bottom: 1px solid #b6b6b6;
   }
